# ingress2gateway

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  action.yml  kubectl-ingress2gateway  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dco.yml
charts/ingress2gateway/: Chart.yaml  README.md  values.yaml
charts/ingress2gateway/templates/: _helpers.tpl  deployment.yaml  gateway.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: api.md  cli.md  conf.py  conversion-mapping.md  getting-started.md  github-action.md  helm-chart.md  index.rst  kubectl-plugin.md  providers.md  requirements.txt  usage.md
src/ingress2gateway/: __init__.py  alb_gce.py  annotations.py  cli.py  converter.py  grpc.py  main.py  providers.py  reference_grant.py  report.py  reverse.py  tcp_udp.py  validation.py
tests/: __init__.py  test_alb_gce.py  test_annotations.py  test_converter.py  test_providers.py  test_reference_grant.py  test_reverse.py  test_tcp_udp.py  test_validation.py
